--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   "homepage": "https://github.com/MrP/phantomjs-render-large-page#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
-    "grunt-jasmine-nodejs": "^1.5.3",
-    "load-grunt-tasks": "^3.5.0",
-    "node-resemble-js": "0.0.5",
-    "phantomjs-prebuilt": "^2.1.7"
+    "grunt-jasmine-nodejs": "^1.5.4",
+    "load-grunt-tasks": "^3.5.2",
+    "node-resemble-js": "^0.2.0",
+    "phantomjs-prebuilt": "^2.1.13"
   },
   "dependencies": {
-    "promise-polyfill": "^5.2.1"
+    "promise-polyfill": "^6.0.2"
   }
 }
