--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "PhantomJS can’t render very tall or wide pages (more than 30k pixels). This library is a workaround to do it anyway.",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine",
-    "install": "echo \"Don't forget to install imagemagick:\nsudo apt-get update\nsudo apt-get install imagemagick\""
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -27,7 +26,7 @@
   },
   "homepage": "https://github.com/MrP/phantomjs-render-large-page#readme",
   "devDependencies": {
-    "jasmine": "^2.5.3",
+    "jasmine": "^2.6.0",
     "node-resemble-js": "^0.2.0",
     "phantomjs-prebuilt": "^2.1.14"
   },
